Archive2/d9/72e64a186ea417/output
main.cpp: In function 'main':
main.cpp:6:18: error: 'M_PI' undeclared (first use in this function)
     printf("%f", M_PI);
                  ^
main.cpp:6:18: note: each undeclared identifier is reported only once for each function it appears in
